[workspace]
resolver = "2"
members = [
    "rust-bin/timestamp",
    "rust-bin/shuffle",
    "rust-bin/shuffle-optimized",
    "rust-bin/limit",
    "rust-bin/jsonify",
    "rust-bin/b64",
]

[workspace.dependencies]
gullwing = { git = "https://github.com/freol35241/gullwing.git" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
