[package]
name = "jsonify"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jsonify"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
gullwing = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
